--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLAUTZE - Technology Industry</title>
 </head>
+<h1><center>CLAUTZE - Technology Industry </center></h1>
+
 <body>
     
 </body>
