--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CLAUTZE - Technology Industry</title>
-</head>
-<h1><center>CLAUTZE - Technology Industry </center></h1>
+  </head>
+  <h1><center>CLAUTZE - Technology Industry</center></h1>
+  <p>Siap membantu anda membuat website dengan sesuai yang anda inginkan. Kami mempunyai beberapa tema untuk website anda disini. Hubungi kami jika anda membutuhkan bantuan atau solusi</p>
 
-<body>
-    
-</body>
+  <body></body>
 </html>
