--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CLAUTZE - Technology Industry</title>
   </head>
   <h1><center>CLAUTZE - Technology Industry</center></h1>
-  <p>Siap membantu anda membuat website dengan sesuai yang anda inginkan. Kami mempunyai beberapa tema untuk website anda disini. Hubungi kami jika anda membutuhkan bantuan atau solusi</p>
+  <p style="text-align: justify;">Siap membantu anda membuat website dengan sesuai yang anda inginkan. Kami mempunyai beberapa tema untuk website anda disini. Hubungi kami jika anda membutuhkan bantuan atau solusi</p>
 
   <body></body>
 </html>
