--- a/index.html
+++ b/index.html
@@ -31,18 +31,22 @@
     
         <div class="content">
 
-            <h1><center>Apa yang anda butuhkan, mungkin disini tempatnya</center></h1>
-            <p>- Wujudkan website impianmu</p>
-            <p>- Bangun website untuk keperluan bisnis anda</p>
-            <p>- Bangun website untuk keperluan perusahaan anda</p>
+            <h1><center>Apa yang anda butuhkan, mungkin disini tempatnya</center></h1><br>
+            <li><a>Wujudkan website impianmu</a></li>
+                <p>Kamu bisa menciptakan website semau kamu dan semenarik mungkin agar orang lain dapat mengetahuhi apa yang kamu ingin beritahu kepada mereka secara cepat dan tepat</p><br>
+            
+            <li><a>Bangun website untuk keperluan bisnis atau keperluan perusahaan anda</a></li>
+                <p>&nbsp;</p>
 
+            <li><a>Bangun blog atau website untuk diri dengan sangat elegant</a></li>
+                <p>&nbsp;</p>
         <p style="text-align: justify;"></p>
 	</div>
 	
       <footer>
   <div class="footer-container">
     <div class="footer-col">
-      <h3>Tentant Perusahaan</h3>
+      <h3>Tentang Perusahaan</h3>
       <p>Siap membantu anda membuat website dengan sesuai yang anda inginkan. Kami mempunyai beberapa tema untuk website anda disini. Hubungi kami jika anda membutuhkan bantuan atau solusi</p>
     </div>
 
