--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>CLAUTZE - Technology Industry</title>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -44,10 +45,10 @@
       <p style="text-align: justify"></p>
 
     <div class="button-container">
-    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-whatsapp" style="font-size: 1.4rem;"></i>Whatsapp</button>
-    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-instagram" style="font-size: 1.4rem;"></i>Instagram</button>
-    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-facebook-official" style="font-size: 1.4rem;"></i>Facebook</button>
-    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-telegram" style="font-size: 1.4rem;"></i>Telegram</button>
+    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-whatsapp" style="font-size: 20px;"></i> Whatsapp</button>
+    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-instagram" style="font-size: 20px;"></i> Instagram</button>
+    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-facebook-official" style="font-size: 20px;"></i> Facebook</button>
+    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-telegram" style="font-size: 20px;"></i> Telegram</button>
     </div>
     </div>
     
