--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
+<header>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li class="dropdown">
+        <a href="#">Products</i>&#9662;</a>
+        <ul>
+          <li><a href="#">Product 1</a></li>
+          <li><a href="#">Product 2</a></li>
+          <li><a href="#">Product 3</a></li>
+        </ul>
+      </li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li class="dropdown">
+        <a href="#"><i class="fa fa-navicon" style="font-size: 22px;"></i></a>
+        <ul>
+          <li><a href="#">database 1</a></li>
+          <li><a href="#">database 2</a></li>
+          <li><a href="#">database 3</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+
   <body>
     <div class="loading">
       <div class="loading-icon"></div>
