--- a/index.html
+++ b/index.html
@@ -13,24 +13,17 @@
 
 <header>
   <nav>
+    <img src="favicon.ico" alt=" " style="width: 40px;";>
     <ul>
       <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
       <li class="dropdown">
         <a href="#">Products</i>&#9662;</a>
         <ul>
-          <li><a href="#">Product 1</a></li>
-          <li><a href="#">Product 2</a></li>
-          <li><a href="#">Product 3</a></li>
-        </ul>
-      </li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
-      <li class="dropdown">
-        <a href="#"><i class="fa fa-navicon" style="font-size: 22px;"></i></a>
-        <ul>
-          <li><a href="#">database 1</a></li>
-          <li><a href="#">database 2</a></li>
-          <li><a href="#">database 3</a></li>
+          <li><a href="#">Theme 1</a></li>
+          <li><a href="#">Theme 2</a></li>
+          <li><a href="#">Theme 3</a></li>
         </ul>
       </li>
     </ul>
@@ -72,7 +65,7 @@
       <p style="text-align: justify"></p>
 
     <div class="button-container">
-    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-whatsapp" style="font-size: 20px;"></i> Whatsapp</button>
+    <button class="red-button" onclick="https://www.google.com/"><i class="fa fa-whatsapp" style="font-size: 20px;"></i> Whatsapp</button>
     <button class="red-button" onclick="http:window.google.com"><i class="fa fa-instagram" style="font-size: 20px;"></i> Instagram</button>
     <button class="red-button" onclick="http:window.google.com"><i class="fa fa-facebook-official" style="font-size: 20px;"></i> Facebook</button>
     <button class="red-button" onclick="http:window.google.com"><i class="fa fa-telegram" style="font-size: 20px;"></i> Telegram</button>
