--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       <p style="text-align: justify"></p>
 
     <div class="button-container">
-    <button class="red-button" onclick="https://www.google.com/"><i class="fa fa-whatsapp" style="font-size: 20px;"></i> Whatsapp</button>
-    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-instagram" style="font-size: 20px;"></i> Instagram</button>
-    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-facebook-official" style="font-size: 20px;"></i> Facebook</button>
-    <button class="red-button" onclick="http:window.google.com"><i class="fa fa-telegram" style="font-size: 20px;"></i> Telegram</button>
+    <a href="https://www.google.com" class="red-button"><i class="fa fa-whatsapp" style="font-size: 19px; padding-right: 2px; "></i>Whatsapp</a>
+    <a href="https://www.google.com" class="red-button"><i class="fa fa-instagram" style="font-size: 19px; padding-right: 2px; "></i>Instagram</a>
+    <a href="https://www.google.com" class="red-button"><i class="fa fa-facebook-official" style="font-size: 19px; padding-right: 2px; "></i>Facebook</a>
+    <a href="https://www.google.com" class="red-button"><i class="fa fa-telegram" style="font-size: 19px; padding-right: 2px; "></i>Telegram</a>
     </div>
     </div>
     
