--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>CLAUTZE - Technology Industry</title>
 
@@ -15,7 +15,7 @@
   <nav>
     <img src="favicon.ico" alt=" " style="width: 40px;";>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="halaman1.html">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
       <li class="dropdown">
