--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="content">
       <h1><center>Create Your Website With Clautze A Very Simple And Faster</center></h1>
       <br />
-      <li><a>Wujudkan website impianmu</a></li>
+      <h2>- Wujudkan website impianmu</h2>
       <p>Kamu bisa menciptakan website sesuka hati kamu dan semenarik mungkin agar orang lain dengan mudah membeli produk atau barang jualan kamu</p>
       <br />
 
