--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav>
     <img src="favicon.ico" alt=" " style="width: 40px;";>
     <ul>
-      <li><a href="halaman1.html">Home</a></li>
+      <li><a href="./page/viewer.html">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
       <li class="dropdown">
