--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <nav>
     <img src="favicon.ico" alt=" " style="width: 40px;";>
     <ul>
-      <li><a href="./page/viewer.html">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
       <li class="dropdown">
         <a href="#">Products</i>&#9662;</a>
         <ul>
-          <li><a href="#">Theme 1</a></li>
+          <li><a href="./page/viewer.html">Tema 1</a></li>
           <li><a href="#">Theme 2</a></li>
           <li><a href="#">Theme 3</a></li>
         </ul>
