--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
       <p>Kamu bisa menciptakan website sesuka hati kamu dan semenarik mungkin agar orang lain dengan mudah membeli produk atau barang jualan kamu</p>
       <br />
 
-      <li><a>Bangun website untuk keperluan bisnis atau keperluan perusahaan anda</a></li>
-      <p>&nbsp;</p>
+      <h2>- Bangun website untuk keperluan bisnis atau keperluan perusahaan anda</h2>
+      <p style="text-align: justify">Akan kami bantu secepat mungkin</p>
 
-      <li><a>Bangun blog atau website untuk diri dengan sangat elegant</a></li>
-      <p>&nbsp;</p>
-      <p style="text-align: justify"></p>
+      <h2>- Bangun blog atau website untuk diri dengan sangat elegant</h2>
 
+
+      <br><br><br><br>
+      
     <div class="button-container">
     <a href="https://www.google.com" class="red-button"><i class="fa fa-whatsapp" style="font-size: 19px; padding-right: 2px; "></i>Whatsapp</a>
     <a href="https://www.google.com" class="red-button"><i class="fa fa-instagram" style="font-size: 19px; padding-right: 2px; "></i>Instagram</a>
