--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
             <li><a href="#">Portofolio</a></li>
             <li><a href="#">Social Media</a></li>
             <li><a href="#">Contact</a></li>
-        </ul>
+          </ul>
+          <ul>
+          <li><a href="page\UAS.html">UAS PIK</a></li>
+          </ul>
     </div>
         <div class="footer-col">
           <h3>Contact</h3>
