--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li><a href="#">Contact</a></li>
           </ul>
           <ul>
-          <li><a href="page\UAS.html">UAS PIK</a></li>
+          <li><a href="page\downloadfiles\UAS.html">UAS PIK</a></li>
           </ul>
     </div>
         <div class="footer-col">
