--- a/index.html
+++ b/index.html
@@ -89,8 +89,12 @@
             <li><a href="#">Social Media</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
+    </div>
+    <div class="footer-col">
+          <h3>Tugas Semester 6</h3>
           <ul>
-          <li><a href="page\downloadfiles\UAS_PIK_KELOMPOK2.pdf" download>UAS PIK</a></li>
+          <li><a href="page\downloadfiles\UAS_PIK_KELOMPOK2.pdf" download>UAS PIK PDF</a></li>
+          <li><a href="page\downloadfiles\UAS_PIK_KELOMPOK2.docx" download>UAS PIK WORD/a></li>
           </ul>
     </div>
         <div class="footer-col">
