--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <ul>
           <li><a href="page\downloadfiles\UAS_PIK_KELOMPOK2.pdf" download>UAS PIK PDF</a></li>
           <li><a href="page\downloadfiles\UAS_PIK_KELOMPOK2.docx" download>UAS PIK WORD</a></li>
-          <li><a href="page\uploader\uploader.html" download>UPLOAD</a></li>
+          <li><a href="page\uploader\uploader.html">UPLOAD</a></li>
           
           </ul>
     </div>
