--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
       <li class="dropdown">
-        <a href="#">Products</i>&#9662;</a>
+        <a href="#">Marsmallow</i>&#9662;</a>
         <ul>
-          <li><a href="./page/viewer.html">Tema 1</a></li>
-          <li><a href="#">Theme 2</a></li>
-          <li><a href="#">Theme 3</a></li>
+          <li><a href="./page/viewer.html">Tema one</a></li>
+          <li><a href="./page/uploadpage.html">UPLOAD File</a></li>
+          <li><a href="./page/downloadpage.html">Download File</a></li>
         </ul>
       </li>
     </ul>
