--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>CLAUTZE - Technology Industry</title>
+    <title>CLAUTZE - My Technology</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
       <li class="dropdown">
         <a href="#">Marsmallow</i>&#9662;</a>
         <ul>
-          <li><a href="./page/viewer.html">Tema one</a></li>
+          <li><a href="./page/viewer.html">Tema </a></li>
           <li><a href="./page/uploadpage.html">UPLOAD File</a></li>
           <li><a href="./page/downloadpage.html">Download File</a></li>
         </ul>
@@ -34,7 +34,7 @@
   <body>
     <div class="loading">
       <div class="loading-icon"></div>
-      <p class="loadtext">mohon tunggu sebentar...</p>
+      <p class="loadtext">Tunggu sebentar...</p>
     </div>
 
     <script>
@@ -42,28 +42,27 @@
       window.onload = function () {
         setTimeout(function () {
           document.querySelector('.loading').style.display = 'none';
-        }, 2000);
+        }, 1000);
       };
     </script>
 
     <div class="judul">
-      <h1>CLAUTZE - Technology Industry</h1>
+      <h1>CLAUTZE</h1>
     </div>
 
     <div class="content">
-      <h1><center>Create Your Website With Clautze A Very Simple And Faster</center></h1>
+      <h1><center>Another World</center></h1>
       <br />
-      <h2>- Wujudkan website impianmu</h2>
-      <p>Kamu bisa menciptakan website sesuka hati kamu dan semenarik mungkin agar orang lain dengan mudah membeli produk atau barang jualan kamu</p>
+      <h2>- Apa yang kamu cari disini</h2>
+      <p>Saya bisa membantumu selagi saya mampu dan bisa</p>
       <br />
 
-      <h2>- Bangun website untuk keperluan bisnis atau keperluan perusahaan anda</h2>
-      <p style="text-align: justify">Akan kami bantu secepat mungkin</p>
+      <h2>- File-file yang kuciptakan sendiri</h2>
+      <p>Aku yang mengatur disini sendirian</p>
+      <br />
 
-      <h2>- Bangun blog atau website untuk diri dengan sangat elegant</h2>
-
-
-      <br><br><br><br>
+      
+      <br><br><br>
       
     <div class="button-container">
     <a href="https://www.google.com" class="red-button"><i class="fa fa-whatsapp" style="font-size: 19px; padding-right: 2px; "></i>Whatsapp</a>
@@ -86,20 +85,22 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Project</a></li>
             <li><a href="#">Portofolio</a></li>
+          </ul>
+          <ul> 
             <li><a href="#">Social Media</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
     </div>
     <div class="footer-col">
-          <h3>Tugas Semester 6</h3>
+          <h3>Another</h3>
           <ul>
-          <li><a href="page\downloadfiles\UAS_PIK_KELOMPOK2.pdf" download>UAS PIK PDF</a></li>
-          <li><a href="page\downloadfiles\UAS_PIK_KELOMPOK2.docx" download>UAS PIK WORD</a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
           </ul>
     </div>
         <div class="footer-col">
           <h3>Contact</h3>
-          <p>Central park <br />Jakarta Barat, INDONESIA<br />Phone: (+62) 8888888 <br />Email: clautzer28@gmail.com</p>
+          <p>Jendral Sudirman <br />Jakarta Barat, INDONESIA<br />Phone: (+62) 8888888 <br />Email: clautzer28@gmail.com</p>
         </div>
       </div>
     </footer>
