--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     </script>
 
     <div class="judul">
-      <h1>CLAUTZE</h1>
+      <h1>CLAUTZE - Another World</h1>
     </div>
 
     <div class="content">
-      <h1><center>Another World</center></h1>
+      <h1><center></center></h1>
       <br />
       <h2>- Apa yang kamu cari disini</h2>
       <p>Saya bisa membantumu selagi saya mampu dan bisa</p>
