--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
       <p>Aku yang mengatur disini sendirian</p>
       <br />
 
+      <h2>- Deidara</h2>
+      <p>Seni adalah ledakan</p>
+      <br />
+
       
       <br><br><br>
       
