--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <footer>
       <div class="footer-container">
         <div class="footer-col">
-          <h3>Tentang Perusahaan</h3>
-          <p>Siap membantu anda membuat website dengan sesuai yang anda inginkan. Kami mempunyai beberapa tema untuk website anda disini. Hubungi kami jika anda membutuhkan bantuan atau solusi</p>
+          <h3>Tentang Web</h3>
+          <p>Siap sedia bila dibutuhkan</p>
         </div>
 
         <div class="footer-col">
