--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <a href="https://www.google.com" class="red-button"><i class="fa fa-whatsapp" style="font-size: 19px; padding-right: 2px; "></i>Whatsapp</a>
     <a href="https://www.google.com" class="red-button"><i class="fa fa-instagram" style="font-size: 19px; padding-right: 2px; "></i>Instagram</a>
     <a href="https://www.google.com" class="red-button"><i class="fa fa-facebook-official" style="font-size: 19px; padding-right: 2px;"></i>Facebook</a>
-    <a href="t.me/+r8QcRq_35lxjZDE1" class="red-button"><i class="fa fa-telegram" style="font-size: 19px; padding-right: 2px; "></i>Telegram</a>
+    <a href="https://t.me/+r8QcRq_35lxjZDE1" class="red-button"><i class="fa fa-telegram" style="font-size: 19px; padding-right: 2px; "></i>Telegram</a>
     </div>
     </div>
     
