--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#">Marsmallow</i>&#9662;</a>
         <ul>
           <li><a href="./page/viewer.html">Tema </a></li>
-          <li><a href="./page/uploadpage.html">UPLOAD File</a></li>
+          <li><a href="./page/note.html">Your Note</a></li>
           <li><a href="./page/downloadpage.html">Download File</a></li>
         </ul>
       </li>
